# DefenseKit

./: .gitignore  CMakeLists.txt  README.md  SETUP.md
.github/workflows/: ci.yml
docs/: 기술스택_설명.md  방산기업_지원가이드.md
examples/: ballistics_demo.cpp  radar_demo.cpp
src/ballistics/: atmosphere.hpp  projectile.cpp  projectile.hpp
src/navigation/: ins.cpp  ins.hpp
src/radar/: target_tracker.cpp  target_tracker.hpp
src/signal_processing/: fft.cpp  fft.hpp  kalman_filter.cpp  kalman_filter.hpp
src/utils/: constants.hpp  matrix.hpp
tests/: CMakeLists.txt  test_ballistics.cpp  test_fft.cpp  test_kalman.cpp
